# ha-octopusenergy-oejp

./: .env.example  .gitignore  LICENSE  README.md  api.md  hacs.json  pyproject.toml
.github/workflows/: hacs-validation.yml  hassfest.yml  test-and-release.yml
custom_components/octopusenergy_oejp/: __init__.py  api.py  cli.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  statistics.py  strings.json
octopusenergy_oejp_demo/: __init__.py  cli.py  client.py  discovery.py  env.py  graphql.py  redaction.py
reports/: aggregate_cost_sensors_report.md  cumulative_sensors_update_report.md  httpx_async_test_report.md  real_account_data_report.md  sensor_cli_output.md  sensor_cli_output_access_token.md  sensor_cli_output_account_number_query.md  sensor_cli_output_no_jwt_prefix.md
scripts/: fetch_sensors.py  generate_option_a_brand_assets.py  package_integration.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_client.py  test_discovery.py  test_env.py  test_models.py  test_package.py  test_redaction.py  test_sensor.py  test_statistics.py
