[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-octopusenergy-oejp-demo"
version = "0.1.0"
description = "Demo Home Assistant custom integration prototype for the Octopus Energy Japan/Korea OEJP Kraken REST API."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Prototype" }]
license = "MIT"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
oejp-demo = "octopusenergy_oejp_demo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["octopusenergy_oejp_demo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
