[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-octopusenergy-oejp"
version = "0.1.0"
description = "Home Assistant custom integration for the Octopus Energy Japan/Korea OEJP Kraken API."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "strongbugman" }]
license = "MIT"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
