[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-octopusenergy-oejp"
dynamic = ["version"]
description = "Home Assistant custom integration for the Octopus Energy Japan/Korea OEJP Kraken API."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "strongbugman" }]
license = "MIT"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.setuptools.dynamic]
version = {attr = "custom_components.octopusenergy_oejp.const.VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
